; ModuleID = '/home/carl/AnghaBench/php-src/ext/spl/extr_spl_heap.c_spl_ptr_heap_zval_min_cmp.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/spl/extr_spl_heap.c_spl_ptr_heap_zval_min_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@exception = common dso_local global i32 0, align 4
@FAILURE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32*)* @spl_ptr_heap_zval_min_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spl_ptr_heap_zval_min_cmp(i8* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %8, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = bitcast i8* %14 to i32*
  store i32* %15, i32** %9, align 8
  %16 = load i32, i32* @exception, align 4
  %17 = call i64 @EG(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %47

20:                                               ; preds = %3
  %21 = load i32*, i32** %7, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %43

23:                                               ; preds = %20
  %24 = load i32*, i32** %7, align 8
  %25 = call %struct.TYPE_4__* @Z_SPLHEAP_P(i32* %24)
  store %struct.TYPE_4__* %25, %struct.TYPE_4__** %10, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %42

30:                                               ; preds = %23
  store i32 0, i32* %11, align 4
  %31 = load i32*, i32** %7, align 8
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %33 = load i32*, i32** %8, align 8
  %34 = load i32*, i32** %9, align 8
  %35 = call i64 @spl_ptr_heap_cmp_cb_helper(i32* %31, %struct.TYPE_4__* %32, i32* %33, i32* %34, i32* %11)
  %36 = load i64, i64* @FAILURE, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %30
  store i32 0, i32* %4, align 4
  br label %47

39:                                               ; preds = %30
  %40 = load i32, i32* %11, align 4
  %41 = call i32 @ZEND_NORMALIZE_BOOL(i32 %40)
  store i32 %41, i32* %4, align 4
  br label %47

42:                                               ; preds = %23
  br label %43

43:                                               ; preds = %42, %20
  %44 = load i32*, i32** %9, align 8
  %45 = load i32*, i32** %8, align 8
  %46 = call i32 @zend_compare(i32* %44, i32* %45)
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %43, %39, %38, %19
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i64 @EG(i32) #1

declare dso_local %struct.TYPE_4__* @Z_SPLHEAP_P(i32*) #1

declare dso_local i64 @spl_ptr_heap_cmp_cb_helper(i32*, %struct.TYPE_4__*, i32*, i32*, i32*) #1

declare dso_local i32 @ZEND_NORMALIZE_BOOL(i32) #1

declare dso_local i32 @zend_compare(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
